<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WayGO</string>
    <string name="project_mail">waygo2023@gmail.com</string>
    <string name="mapbox_access_token" translatable="false" tools:ignore="UnusedResources">sk.eyJ1Ijoid2F5Z283NzciLCJhIjoiY2x2OThydnhrMHRrYjJranp3MDRmOXM0diJ9.btMEWCjXrW5q3H0FU9ODww</string>
    <string name="login">Войти</string>
    <string name="clear">Очистить</string>
    <string name="no">Нет</string>
    <string name="cancel">Отменить</string>
    <string name="yes">Да</string>
    <string name="rostov">Ростов-на-Дону</string>
    <string name="city_name">Название города</string>
    <string name="registration_question">Ещё не зарегистрированы?</string>
    <string name="registration">Регистрация</string>
    <string name="register">Зарегистрироваться</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="create_password">Придумайте пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="name">Имя</string>
    <string name="search">Что хотите увидеть?</string>
    <string name="main_location_name">Центральный универмаг</string>
    <string name="main_location_description">Старейший торговый центр Ростова-на-Дону</string>
    <string name="test_location_name">Сталинские высотки</string>
    <string name="test_location_description">Семь высотных зданий, строившихся в Москве в 1947—1957 годах. </string>
    <string name="test_route_length">3,2 км</string>
    <string name="test_country">Ростов-на-Дону</string>
    <string name="excursions">Экскурсии</string>
    <string name="attractions">Достопримечательности</string>
    <string name="dots">Точки</string>
    <string name="main">Главная</string>
    <string name="map">Карта</string>
    <string name="favorites">Избранное</string>
    <string name="arConfirm">Вы хотите загрузить модель </string>
    <string name="arContinue">\nПродолжить?</string>
    <string name="favorites_empty">У вас еще \n нет избранного</string>
    <string name="go_home">Перейти на главную, </string>
    <string name="find_excursion"> чтобы найти подходящую экскурсию</string>
    <string name="profile">Профиль</string>
    <string name="account">Аккаунт</string>
    <string name="feedback">Обратная связь</string>
    <string name="subscribe">Подписка</string>
    <string name="change_pass">Изменить пароль</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="sign_out">Выйти из профиля</string>
    <string name="theme">Тема</string>
    <string name="feedback_massege">Ваше сообщение</string>
    <string name="subscribe_in_development">В разработке</string>
    <string name="next">Далее</string>
    <string name="verification_code">Код подтверждения</string>
    <string name="change">Изменить</string>
    <string name="get_code">Запросить код</string>
    <string name="new_password">Придумайте новый пароль</string>
    <string name="change_password_success">Пароль успешно изменен</string>
    <string name="end_excursion">Завершить</string>
    <string name="close">Закрыть</string>
    <string name="send">Отправить</string>
    <string name="go_to_next_point">К следующей точке</string>
    <string name="test_location_description_long">Семь «сталинских сестер» — знаменитые высотные здания, которые стали символом Москвы.
        На этой прогулке мы поговорим об истории строительства, сложностях,
        которые возникли у архитекторов и о назначении каждого здания.</string>
    <string name="go_to_excursion">Начать экскурсию</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>