<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    tools:context=".login.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/background_app"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118"
        app:layout_constraintWidth_percent="0.68" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/substrate_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.72"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/button_style_transparent"
            android:includeFontPadding="false"
            android:paddingStart="0dp"
            android:text="@string/forgot_password"
            android:textColor="@color/app_theme"
            android:textSize="12sp"
            android:textStyle="bold"
            app:elevation="0dp"
            app:iconPadding="0dp"
            app:layout_constraintBottom_toTopOf="@+id/button_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.058"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_layout"
            app:layout_constraintVertical_bias="0.588" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_login"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="52dp"
            android:background="@drawable/button_style_app_theme"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal|center_vertical"
            android:minHeight="48dp"
            android:text="@string/login"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/white"
            app:backgroundTint="@color/app_theme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.09"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_layout"
            app:layout_constraintWidth_percent="0.91" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/button_style_transparent"
            android:minHeight="48dp"
            android:gravity="top"
            app:errorEnabled="true"
            android:textColorHint="@color/text_gray"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.13"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text"
            app:layout_constraintWidth_percent="0.91"
            app:passwordToggleTintMode="multiply"
            app:placeholderTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/text_field_background"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:minHeight="48dp"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/white"
            android:gravity="top"
            android:minHeight="48dp"
            app:errorEnabled="true"
            android:textColorHint="@color/text_gray"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.13"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_layout"
            app:layout_constraintWidth_percent="0.91"
            app:passwordToggleEnabled="true"
            app:passwordToggleTintMode="multiply"
            app:placeholderTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/text_field_background"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minHeight="48dp"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:textColorHint="@color/text_gray"
                android:textColorLink="@color/text_gray"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="269dp"
            android:layout_height="31dp"
            android:layout_marginTop="24dp"
            android:background="#FFFFFF"
            android:text="@string/welcome"
            android:textColor="#000000"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.112"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_login"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"
                android:background="@color/white"
                android:gravity="start|center_vertical"
                android:text="@string/registration_question"
                android:textSize="12sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_registration"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="1dp"
                android:background="@drawable/button_style_transparent"
                android:includeFontPadding="false"
                android:paddingStart="0dp"
                android:text="@string/registration"
                android:textColor="@color/app_theme"
                android:textSize="12sp"
                android:textStyle="bold"
                app:elevation="0dp"
                app:iconPadding="0dp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>