<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="290dp"
    android:background="@color/background_app"
    tools:context=".fragment.LocationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/background"
        android:layout_width="343dp"
        android:layout_height="282dp"
        android:background="@drawable/substrate_fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/image"
            android:layout_width="327dp"
            android:layout_height="187dp"
            android:layout_marginTop="6dp"
            android:background="@color/background_app"
            android:contentDescription="@string/app_name"
            android:src="@drawable/location_test"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/test_location_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.079"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image" />

        <TextView
            android:id="@+id/descriprion"
            android:layout_width="285dp"
            android:layout_height="46dp"
            android:maxLines="3"
            android:text="@string/test_location_description"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.275"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_location"
            app:layout_constraintVertical_bias="0.687" />

        <ToggleButton
            android:id="@+id/toggle_favorite"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:background="@drawable/toggle_favorites"
            android:textOff="@null"
            android:textOn="@null"
            app:layout_constraintBottom_toBottomOf="@+id/image"
            app:layout_constraintEnd_toEndOf="@+id/image"
            app:layout_constraintHorizontal_bias="0.972"
            app:layout_constraintStart_toStartOf="@+id/image"
            app:layout_constraintTop_toTopOf="@+id/image"
            app:layout_constraintVertical_bias="0.067" />

        <TextView
            android:id="@+id/route_length"
            android:layout_width="87dp"
            android:layout_height="30dp"
            android:background="@drawable/route_length_background"
            android:drawableLeft="@drawable/route_icon"
            android:gravity="center"
            android:text="@string/test_route_length"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/image"
            app:layout_constraintEnd_toEndOf="@+id/image"
            app:layout_constraintHorizontal_bias="0.966"
            app:layout_constraintStart_toStartOf="@+id/image"
            app:layout_constraintTop_toBottomOf="@+id/toggle_favorite"
            app:layout_constraintVertical_bias="0.917" />

        <Button
            android:id="@+id/button_goto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>