<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    tools:context=".favorite.FavoriteActivity">

    <ProgressBar
        android:id="@+id/loading"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/app_theme"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/location_container"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:foregroundGravity="center"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.65"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/background_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:tabIndicator="@drawable/tab_indicator"
        app:tabIndicatorColor="@color/app_theme"
        app:tabIndicatorGravity="bottom"
        app:tabRippleColor="@color/background_app"
        app:tabSelectedTextColor="@color/app_theme"
        app:tabTextColor="@color/text_gray">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tap_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background_app"
            android:text="@string/excursions"
            tools:layout_editor_absoluteX="3dp"
            tools:layout_editor_absoluteY="129dp" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background_app"
            android:backgroundTint="@color/background_app"
            android:text="@string/dots"
            tools:layout_editor_absoluteX="190dp"
            tools:layout_editor_absoluteY="111dp" />

    </com.google.android.material.tabs.TabLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:foregroundTint="@color/background_app"
        app:backgroundTint="@color/white"
        app:itemActiveIndicatorStyle="@android:color/transparent"
        app:itemBackground="@color/background_app"
        app:itemIconTint="@drawable/navigation_item_selector"
        app:itemPaddingTop="25dp"
        app:itemRippleColor="@color/background_app"
        app:itemTextColor="@drawable/navigation_item_selector"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navigation_items" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/favorites"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/empty_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout"
        app:layout_constraintVertical_bias="0.244">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/go_home"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:background="@drawable/button_style_transparent"
                android:includeFontPadding="false"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:text="@string/go_home"
                android:textColor="@color/app_theme"
                android:textSize="12sp"
                app:elevation="0dp"
                app:iconPadding="0dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@color/background_gray"
                android:gravity="start|center_vertical"
                android:paddingLeft="3dp"
                android:text="@string/find_excursion"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:text="@string/favorites_empty"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.244"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.475" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:src="@drawable/empty_favorites"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>